# typedb-mcp-server

./: .env.example  .gitignore  Dockerfile  PLAN.md  README.md  client.py  common.py  config.py  database.py  docker-compose.yml  main.py  notes.md  pyproject.toml  query.py  requirements-dev.txt  requirements.txt  server.py  test_server.py  test_server_database_schema.py  test_server_query.py  user.py
test/: test_server_query.py
typedb_mcp/: __init__.py  server.py
typedb_mcp/resources/: __init__.py  schema.py
typedb_mcp/utils/: __init__.py  config.py  connection.py
